--- a/tf/data_preprocessing.ipynb
+++ b/tf/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +32,7 @@
        "<_TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int32, name=None)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -192,13 +193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "housing = fetch_california_housing()\n",
     "X_train_full, X_test, y_train_full, y_test = train_test_split(housing.data, housing.target, random_state=42)\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X_train_full, y_train_full, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_mean, X_std = scaler.mean_, scaler.scale_"
    ]
   },
   {
@@ -289,6 +301,64 @@
    ],
    "source": [
     "for line in dataset.take(5):\n",
+    "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_inputs = 8\n",
+    "\n",
+    "def parse_csv_line(line):\n",
+    "    defs = [0.] * n_inputs + [tf.constant([], dtype=tf.float32)]\n",
+    "    fields = tf.io.decode_csv(line, record_defaults=defs)\n",
+    "    return tf.stack(fields[:-1]), tf.stack(fields[-1:])\n",
+    "\n",
+    "def preprocess(line):\n",
+    "    x, y = parse_csv_line(line)\n",
+    "    return (x - X_mean) / X_std, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: shape=(8,), dtype=float32, numpy=\n",
+      "array([ 0.36618188, -0.998705  ,  0.00781878, -0.00675364, -0.06140145,\n",
+      "        0.0072037 , -0.94465536,  0.9367464 ], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([2.418], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(8,), dtype=float32, numpy=\n",
+      "array([-0.7398411 , -0.36583957, -0.78467995,  0.07414506,  0.75447065,\n",
+      "        0.40770054, -0.68699217,  0.60190356], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([2.], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(8,), dtype=float32, numpy=\n",
+      "array([ 0.19852655,  1.2954322 , -0.13117608, -0.31340504, -0.8508079 ,\n",
+      "       -0.04867317,  0.85898864, -1.3022108 ], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([2.67], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(8,), dtype=float32, numpy=\n",
+      "array([-0.8936168 ,  0.9789995 , -0.6810549 , -0.07264194, -0.5669866 ,\n",
+      "       -0.39212456, -1.3522334 ,  1.2316071 ], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([1.205], dtype=float32)>)\n",
+      "(<tf.Tensor: shape=(8,), dtype=float32, numpy=\n",
+      "array([ 0.15159765,  1.8491895 ,  0.09624147, -0.22151624, -0.66828614,\n",
+      "       -0.23549314, -0.89780813,  0.6368871 ], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([3.215], dtype=float32)>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "processed_dataset = dataset.map(lambda line: preprocess(line))\n",
+    "for line in processed_dataset.take(5):\n",
     "    print(line)"
    ]
   }
