--- a/tf/data_preprocessing.ipynb
+++ b/tf/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "<_TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int32, name=None)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -357,9 +357,126 @@
     }
    ],
    "source": [
-    "processed_dataset = dataset.map(lambda line: preprocess(line))\n",
+    "processed_dataset = dataset.map(preprocess)\n",
     "for line in processed_dataset.take(5):\n",
     "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading and preprocessing in one function\n",
+    "def csv_reader_dataset(filepaths, n_readers=5, n_read_threads=None, n_parse_threads=5, shuffle_buffer_size=10_000, batch_size=32, seed=42):\n",
+    "    # filenames tensor\n",
+    "    dataset = tf.data.Dataset.list_files(filepaths, seed=seed)\n",
+    "    # reading files\n",
+    "    dataset = dataset.interleave(lambda filepath: tf.data.TextLineDataset(filepath).skip(1), cycle_length=n_readers, num_parallel_calls=n_parse_threads)\n",
+    "    # preprocessing\n",
+    "    dataset = dataset.map(preprocess, num_parallel_calls=n_read_threads)\n",
+    "    # shuffle results\n",
+    "    dataset = dataset.shuffle(shuffle_buffer_size, seed=seed)\n",
+    "    # returning data batches with one batch prefetched to speed up learning process\n",
+    "    return dataset.batch(batch_size).prefetch(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set = csv_reader_dataset(train_filepaths)\n",
+    "valid_set = csv_reader_dataset(valid_filepaths)\n",
+    "test_set = csv_reader_dataset(test_filepaths)\n",
+    "\n",
+    "# returns X, y data so usage in models is easier\n",
+    "# model.fit(train_set, validation_data=valid_set, epochs=5)\n",
+    "# model.evaluate(test_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TFRecord format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfrecord_dir = Path() / 'datasets' / 'tfrecord'\n",
+    "tfrecord_dir.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfrecord_path = str(tfrecord_dir / 'test.tfrecord')\n",
+    "with tf.io.TFRecordWriter(tfrecord_path) as f:\n",
+    "    f.write(b'Pierwszy rekord')\n",
+    "    f.write(b'Drugi rekord')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(b'Pierwszy rekord', shape=(), dtype=string)\n",
+      "tf.Tensor(b'Drugi rekord', shape=(), dtype=string)\n"
+     ]
+    }
+   ],
+   "source": [
+    "filepaths = [tfrecord_path]\n",
+    "dataset = tf.data.TFRecordDataset(filepaths)\n",
+    "for item in dataset:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfrecord_path = str(tfrecord_dir / 'compressed.tfrecord')\n",
+    "# with compression\n",
+    "options = tf.io.TFRecordOptions(compression_type='GZIP')\n",
+    "with tf.io.TFRecordWriter(tfrecord_path, options=options) as f:\n",
+    "    f.write(b'Compressed text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(b'Compressed text', shape=(), dtype=string)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = tf.data.TFRecordDataset([tfrecord_path], compression_type='GZIP')\n",
+    "for item in dataset:\n",
+    "    print(item)"
    ]
   }
  ],
