preprocessing using keras layers

--- a/tf/data_preprocessing.ipynb
+++ b/tf/data_preprocessing.ipynb
@@ -478,6 +478,159 @@
     "for item in dataset:\n",
     "    print(item)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keras preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalization used outside of model to speed up learning\n",
+    "norm_layer = tf.keras.layers.Normalization()\n",
+    "norm_layer.adapt(X_train)\n",
+    "X_train_scaled = norm_layer(X_train)\n",
+    "X_valid_scaled = norm_layer(X_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([tf.keras.layers.Dense(1)])\n",
+    "model.compile(loss='mse', optimizer=tf.keras.optimizers.SGD(learning_rate=2e-3))\n",
+    "model.fit(X_train_scaled, y_train, epochs=5, validation_data=(X_valid_scaled, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# then final model uses normalization and learned model as layers\n",
+    "final_model = tf.keras.Sequential([norm_layer, model])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 1), dtype=int64, numpy=\n",
+       "array([[0],\n",
+       "       [2],\n",
+       "       [2],\n",
+       "       [1],\n",
+       "       [0]], dtype=int64)>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age = tf.constant([[10.], [93.], [57.], [37.], [5.]])\n",
+    "# Discretization layer\n",
+    "discretize_layer = tf.keras.layers.Discretization(bin_boundaries=[18., 50.])\n",
+    "age_categories = discretize_layer(age)\n",
+    "age_categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 3), dtype=float32, numpy=\n",
+       "array([[1., 0., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 1., 0.],\n",
+       "       [1., 0., 0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# one hot encoding\n",
+    "onehot_layer = tf.keras.layers.CategoryEncoding(num_tokens=3)\n",
+    "onehot_layer(age_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 1), dtype=int64, numpy=\n",
+       "array([[1],\n",
+       "       [3],\n",
+       "       [3],\n",
+       "       [0]], dtype=int64)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities = ['Auckland', 'Paris', 'Paris', 'San Francisco']\n",
+    "# string lookup layer to categorize strings\n",
+    "str_lookup_layer = tf.keras.layers.StringLookup()\n",
+    "str_lookup_layer.adapt(cities)\n",
+    "# 0 is unknown, rest is according occurence in adapted data (Paris appears 2 times so is first)\n",
+    "str_lookup_layer([['Paris'], ['Auckland'], ['Auckland'], ['Montreal']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
+       "array([[0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# string lookup with one hot encoding\n",
+    "str_lookup_layer = tf.keras.layers.StringLookup(output_mode='one_hot')\n",
+    "str_lookup_layer.adapt(cities)\n",
+    "str_lookup_layer([['Paris'], ['Auckland'], ['Auckland'], ['Montreal']])"
+   ]
   }
  ],
  "metadata": {
