--- a/tf/computer_vision.ipynb
+++ b/tf/computer_vision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "from functools import partial\n",
     "from sklearn.datasets import load_sample_images\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow_datasets as tfds"
    ]
   },
   {
@@ -308,6 +309,158 @@
     "    plt.axis(\"off\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading flowers dataset\n",
+    "dataset, info = tfds.load('tf_flowers', as_supervised=True, with_info=True)\n",
+    "dataset_size = info.splits[\"train\"].num_examples\n",
+    "class_names = info.features[\"label\"].names\n",
+    "n_classes = info.features[\"label\"].num_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split set into test, validation, train\n",
+    "test_set_raw, valid_set_raw, train_set_raw = tfds.load(\n",
+    "    'tf_flowers',\n",
+    "    split=[\"train[:10%]\", \"train[10%:25%]\", \"train[25%:]\"],\n",
+    "    as_supervised=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Projects\\ml_tests\\venv\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\core.py:192: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Projects\\ml_tests\\venv\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\core.py:192: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# preprocessing\n",
+    "batch_size = 32\n",
+    "preprocess = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Resizing(height=224, width=224, crop_to_aspect_ratio=True),\n",
+    "    tf.keras.layers.Lambda(tf.keras.applications.xception.preprocess_input)\n",
+    "])\n",
+    "train_set = train_set_raw.map(lambda X, y: (preprocess(X), y))\n",
+    "train_set = train_set.shuffle(1000, seed=42).batch(batch_size).prefetch(1)\n",
+    "valid_set = valid_set_raw.map(lambda X, y: (preprocess(X), y)).batch(batch_size)\n",
+    "test_set = test_set_raw.map(lambda X, y: (preprocess(X), y)).batch(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generating more images\n",
+    "data_augmentation = tf.keras.Sequential([\n",
+    "    tf.keras.layers.RandomFlip(mode='horizontal', seed=42),\n",
+    "    tf.keras.layers.RandomRotation(factor=0.05, seed=42),\n",
+    "    tf.keras.layers.RandomContrast(factor=0.2, seed=42)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using bottom xception layers\n",
+    "base_model = tf.keras.applications.xception.Xception(weights=\"imagenet\", include_top=False)\n",
+    "avg = tf.keras.layers.GlobalAveragePooling2D()(base_model.output)\n",
+    "output = tf.keras.layers.Dense(n_classes, activation=\"softmax\")(avg)\n",
+    "model = tf.keras.Model(inputs=base_model.input, outputs=output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initial freeze of bottom layers\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "\u001b[1m86/86\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m338s\u001b[0m 4s/step - accuracy: 0.6938 - loss: 1.0689 - val_accuracy: 0.8367 - val_loss: 0.6577\n",
+      "Epoch 2/3\n",
+      "\u001b[1m86/86\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m393s\u001b[0m 5s/step - accuracy: 0.9140 - loss: 0.3947 - val_accuracy: 0.8475 - val_loss: 0.7177\n",
+      "Epoch 3/3\n",
+      "\u001b[1m86/86\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m364s\u001b[0m 4s/step - accuracy: 0.9431 - loss: 0.1629 - val_accuracy: 0.8730 - val_loss: 0.5634\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.1, momentum=0.9)\n",
+    "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=['accuracy'])\n",
+    "history = model.fit(train_set, validation_data=valid_set, epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unfreeze part of layers after initial learning\n",
+    "for layer in base_model.layers[56:]:\n",
+    "    layer.trainable = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.1, momentum=0.9)\n",
+    "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=['accuracy'])\n",
+    "history = model.fit(train_set, validation_data=valid_set, epochs=10)"
    ]
   }
  ],
