--- a/tf/computer_vision.ipynb
+++ b/tf/computer_vision.ipynb
@@ -646,6 +646,34 @@
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=['accuracy'])\n",
     "history = model.fit(train_set, validation_data=valid_set, epochs=10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Localization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_model = tf.keras.applications.xception.Xception(weights='imagenet', include_top=False)\n",
+    "avg = tf.keras.layers.GlobalAveragePooling2D()(base_model.output)\n",
+    "# classification output\n",
+    "class_output = tf.keras.layers.Dense(n_classes, activation='softmax')(avg)\n",
+    "# localization output (regression)\n",
+    "# to describe object's location on a photo using a bounding box 4 values are required\n",
+    "loc_output = tf.keras.layers.Dense(4)(avg) # center x, center y, width, height\n",
+    "model = tf.keras.Model(inputs=base_model.input, outputs=[class_output, loc_output])\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.01, momentum=0.9)\n",
+    "model.compile(loss=['sparse_categorical_crossentropy', 'mse'],\n",
+    "              loss_weights=[0.8, 0.2],\n",
+    "              optimizer=optimizer, metrics='accuracy')\n",
+    "# tf.keras.metrics.MeanIoU instead of mse to evaluate final model (jaccard index)"
+   ]
   }
  ],
  "metadata": {
