--- a/tf/nlp.ipynb
+++ b/tf/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://homl.info/shakespeare\n",
-      "\u001b[1m1115394/1115394\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shakespeare_url = \"https://homl.info/shakespeare\"\n",
     "filepath = tf.keras.utils.get_file(\"shakespeare.txt\", shakespeare_url)\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +53,7 @@
        "<tf.Tensor: shape=(1115394,), dtype=int64, numpy=array([21,  7, 10, ..., 22, 28, 12])>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,19 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# delete tokens 0 and 1 (filled, unknown)\n",
     "encoded -= 2\n",
+    "# amount of distinct letters\n",
     "n_tokens = text_vec_layer.vocabulary_size() - 2\n",
     "dataset_size = len(encoded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +89,7 @@
     "    ds = tf.data.Dataset.from_tensor_slices(sequence)\n",
     "    # split data to windows (+1 length for target)\n",
     "    ds = ds.window(length + 1, shift=1, drop_remainder=True)\n",
+    "    # dataset with elements of length: length+1\n",
     "    ds = ds.flat_map(lambda window_ds: window_ds.batch(length + 1))\n",
     "    if shuffle:\n",
     "        ds = ds.shuffle(100_000, seed=seed)\n",
@@ -109,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +111,33 @@
     "train_set = to_dataset(encoded[:1_000_000], length=length, shuffle=True, seed=42)\n",
     "valid_set = to_dataset(encoded[1_000_000:1_060_000], length=length)\n",
     "test_set = to_dataset(encoded[1_060_000:], length=length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model rnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    # coding letters to numbers\n",
+    "    tf.keras.layers.Embedding(input_dim=n_tokens, output_dim=16),\n",
+    "    tf.keras.layers.GRU(128, return_sequences=True),\n",
+    "    tf.keras.layers.Dense(n_tokens, activation=\"softmax\")\n",
+    "])\n",
+    "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"nadam\", metrics=[\"accuracy\"])\n",
+    "# save best (val acc) model\n",
+    "model_ckpt = tf.keras.callbacks.ModelCheckpoint(\n",
+    "    \"shakespeare_model.keras\", monitor=\"val_accuracy\", save_best_only=True\n",
+    ")\n",
+    "history = model.fit(train_set, validation_data=valid_set, epochs=10, callbacks=[model_ckpt])"
    ]
   }
  ],
