text generation, stateful rnn dataset

--- a/tf/nlp.ipynb
+++ b/tf/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "<tf.Tensor: shape=(1115394,), dtype=int64, numpy=array([21,  7, 10, ..., 22, 28, 12])>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +133,91 @@
     "    tf.keras.layers.Dense(n_tokens, activation=\"softmax\")\n",
     "])\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"nadam\", metrics=[\"accuracy\"])\n",
-    "# save best (val acc) model\n",
+    "# save the best model according to validation set accuracy\n",
     "model_ckpt = tf.keras.callbacks.ModelCheckpoint(\n",
     "    \"shakespeare_model.keras\", monitor=\"val_accuracy\", save_best_only=True\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = model.fit(train_set, validation_data=valid_set, epochs=10, callbacks=[model_ckpt])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model with text preprocessing\n",
+    "shakespeare_model = tf.keras.Sequential([\n",
+    "    text_vec_layer,\n",
+    "    tf.keras.layers.Lambda(lambda X: X - 2),\n",
+    "    model\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def next_char(text, temperature=1):\n",
+    "    # probabilities for each letter\n",
+    "    y_proba = shakespeare_model.predict([text])[0, -1:]\n",
+    "    rescaled_logits = tf.math.log(y_proba) / temperature\n",
+    "    # drawing a letter\n",
+    "    char_id = tf.random.categorical(rescaled_logits, num_samples=1)[0, 0]\n",
+    "    return text_vec_layer.get_vocabulary()[char_id + 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extend_text(text, n_chars=50, temperature=1):\n",
+    "    for _ in range(n_chars):\n",
+    "        text+=next_char(text, temperature)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stateful rnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_stateful_rnn_dataset(sequence, length):\n",
+    "    ds = tf.data.Dataset.from_tensor_slices(sequence)\n",
+    "    ds = ds.window(length + 1, shift=length, drop_remainder=True)\n",
+    "    ds = ds.flat_map(lambda window: window.batch(length + 1)).batch(1)\n",
+    "    return ds.map(lambda window: (window[:,:-1], window[:, 1:])).prefetch(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stateful_train_set = to_stateful_rnn_dataset(encoded[:1_000_000], length)\n",
+    "stateful_valid_set = to_stateful_rnn_dataset(encoded[1_000_000:1_060_000], length)\n",
+    "stateful_test_set = to_stateful_rnn_dataset(encoded[1_060_000:], length)"
    ]
   }
  ],
