--- a/tf/generative_models.ipynb
+++ b/tf/generative_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fashion mnist data\n",
+    "# fashion mnist dataset\n",
     "fm_dataset = tf.keras.datasets.fashion_mnist.load_data()\n",
     "(X_train_full, y_train_full), (X_test, y_test) = fm_dataset\n",
     "X_train_full = X_train_full.astype(np.float32) / 255\n",
@@ -166,6 +166,138 @@
    "source": [
     "plot_reconstructions(stacked_autoencoder)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tying weights\n",
+    "# layer using transposed weights of other layer\n",
+    "class DenseTranspose(tf.keras.layers.Layer):\n",
+    "    def __init__(self, dense, activation=None, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.dense = dense\n",
+    "        self.activation = tf.keras.activations.get(activation)\n",
+    "\n",
+    "    def build(self, batch_input_shape):\n",
+    "        self.biases = self.add_weight(name='bias', shape=[self.dense.input.shape[-1]], initializer='zeros')\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        Z = tf.matmul(inputs, self.dense.weights[0], transpose_b=True)\n",
+    "        return self.activation(Z + self.biases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dense_1 = tf.keras.layers.Dense(100, activation='relu')\n",
+    "dense_2 = tf.keras.layers.Dense(30, activation='relu')\n",
+    "tied_encoder = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    dense_1,\n",
+    "    dense_2\n",
+    "])\n",
+    "tied_decoder = tf.keras.Sequential([\n",
+    "    DenseTranspose(dense=dense_2, activation='relu'),\n",
+    "    DenseTranspose(dense=dense_1),\n",
+    "    tf.keras.layers.Reshape([28, 28])\n",
+    "])\n",
+    "tied_autoencoder = tf.keras.Sequential([\n",
+    "    tied_encoder,\n",
+    "    tied_decoder\n",
+    "])\n",
+    "tied_autoencoder.compile(loss='mse', optimizer='nadam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1727871450.629508   91014 service.cc:146] XLA service 0x7ff2f0004be0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1727871450.629580   91014 service.cc:154]   StreamExecutor device (0): NVIDIA GeForce RTX 3060, Compute Capability 8.6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m  44/1719\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m6s\u001b[0m 4ms/step - loss: 0.1322   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1727871461.143175   91014 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 12ms/step - loss: 0.0341 - val_loss: 0.0167\n",
+      "Epoch 2/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 4ms/step - loss: 0.0162 - val_loss: 0.0152\n",
+      "Epoch 3/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - loss: 0.0150 - val_loss: 0.0147\n",
+      "Epoch 4/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0145 - val_loss: 0.0143\n",
+      "Epoch 5/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - loss: 0.0141 - val_loss: 0.0144\n",
+      "Epoch 6/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - loss: 0.0139 - val_loss: 0.0139\n",
+      "Epoch 7/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - loss: 0.0137 - val_loss: 0.0136\n",
+      "Epoch 8/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0134 - val_loss: 0.0137\n",
+      "Epoch 9/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - loss: 0.0133 - val_loss: 0.0134\n",
+      "Epoch 10/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 5ms/step - loss: 0.0132 - val_loss: 0.0135\n",
+      "Epoch 11/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0131 - val_loss: 0.0145\n",
+      "Epoch 12/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 5ms/step - loss: 0.0131 - val_loss: 0.0132\n",
+      "Epoch 13/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0130 - val_loss: 0.0132\n",
+      "Epoch 14/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 6ms/step - loss: 0.0129 - val_loss: 0.0132\n",
+      "Epoch 15/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0129 - val_loss: 0.0131\n",
+      "Epoch 16/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0129 - val_loss: 0.0131\n",
+      "Epoch 17/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0129 - val_loss: 0.0135\n",
+      "Epoch 18/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - loss: 0.0129 - val_loss: 0.0131\n",
+      "Epoch 19/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 6ms/step - loss: 0.0128 - val_loss: 0.0129\n",
+      "Epoch 20/20\n",
+      "\u001b[1m1719/1719\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 6ms/step - loss: 0.0127 - val_loss: 0.0132\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = tied_autoencoder.fit(X_train, X_train, epochs=20, validation_data=(X_valid, X_valid))"
    ]
   }
  ],
