--- a/tf/generative_models.ipynb
+++ b/tf/generative_models.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,6 +542,7 @@
     "    tf.keras.layers.Flatten(),\n",
     "    tf.keras.layers.Dense(150, activation='relu', kernel_initializer='he_normal'),\n",
     "    tf.keras.layers.Dense(150, activation='relu', kernel_initializer='he_normal'),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
     "])\n",
     "gan = tf.keras.Sequential([\n",
     "    generator,\n",
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,13 +563,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 32\n",
     "dataset = tf.data.Dataset.from_tensor_slices(X_train).shuffle(buffer_size=1000)\n",
-    "dataset = dataset.batch(batch_size, drop_remainder=True).prefetch(1)"
+    "dataset = dataset.batch(batch_size, drop_remainder=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_gan(gan, dataset, batch_size, codings_size, n_epochs):\n",
+    "    generator, discriminator = gan.layers\n",
+    "    for epoch in range(n_epochs):\n",
+    "        for X_batch in dataset:\n",
+    "            # generating images for discriminator to judge\n",
+    "            noise = tf.random.normal(shape=[batch_size, codings_size])\n",
+    "            generated_images = generator(noise)\n",
+    "            X_fake_and_real = tf.concat([generated_images, X_batch], axis=0)\n",
+    "            y1 = tf.constant([[0.]] * batch_size + [[1.]] * batch_size) # generated images are marked with 0, real images are marked with 1\n",
+    "            # discriminator learning\n",
+    "            discriminator.train_on_batch(X_fake_and_real, y1)\n",
+    "\n",
+    "            # generator learning\n",
+    "            noise = tf.random.normal(shape=[batch_size, codings_size])\n",
+    "            y2 = tf.constant([[1.]] * batch_size) # generator should learn to cheat discriminator so target is for discriminator to classify generated images as real (1)\n",
+    "            gan.train_on_batch(noise, y2)\n",
+    "        print(f\"epoch {epoch} finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_gan(gan, dataset, batch_size, codings_size, n_epochs=50)"
    ]
   }
  ],
